--- a/confirmation.html
+++ b/confirmation.html
@@ -42,6 +42,6 @@
 <br><br>
 
     <h1><br>Thank You!</h1>
-    <p>Your recipe form has been submitted successfully.</p>
+    <p>Your feedback has been submitted successfully.</p>
 </body>
 </html>
