--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
             background-color: lightpink;
             color: white;
         }
+h2{
+backround-color: cadetblue}
     </style>
 </head>
 <body>
