--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             background-color: lightpink;
             color: white;
         }
-h2{
-backround-color: cadetblue}
+#help{
+backround-color: skyblue}
     </style>
 </head>
 <body>
