--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             text-align: center;
         }
         #station-label {
-            background-color: grey;
+            background-color: skyblue;
             color: white;
         }
         label, #leavingFrom, #goingTo {
@@ -60,17 +60,15 @@
         #compute {
             width: 150px;
             font-size: 14px;
-            background-color: lightpink;
+            background-color: cadetblue;
             color: white;
         }
-#help{
-backround-color: skyblue}
     </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-light fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img id="logo" src="http://clipart-library.com/images_k/silhouette-train/silhouette-train-15.png"></a>
+        <a class="navbar-brand" href="index.html"><img id="logo" src="http://clipart-library.com/images_k/silhouette-train/silhouette-train-15.png"></a> 
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
@@ -85,6 +83,7 @@ backround-color: skyblue}
     </div>
 </nav>
 <br><br><br><br>
+
 
 <div class="container-fluid" id="main">
     <div class="row">
@@ -124,21 +123,35 @@ backround-color: skyblue}
     function calculateFare() {
         let leavingFrom = document.getElementById("leavingFrom").value;
         let goingTo = document.getElementById("goingTo").value;
+
+        if (leavingFrom == "0" || goingTo == "0") {
+            alert("Please select a station.");
+            return;
+        }
+
         let basefare = 13;
         let distance = goingTo - leavingFrom;
         let fare = distance + basefare;
         document.getElementById("DisplayAns").innerHTML = fare + ".00";
     }
+
     function discountFare() {
         let leavingFrom = document.getElementById("leavingFrom").value;
         let goingTo = document.getElementById("goingTo").value;
+
+        if (leavingFrom == "0" || goingTo == "0") {
+            alert("Please select a station.");
+            return;
+        }
+
         let basefare = 13;
         let distance = goingTo - leavingFrom;
-        let disc_fare = .80 * (distance + basefare);
+        let disc_fare = 0.80 * (distance + basefare);
         let fare = disc_fare.toFixed(2);
         document.getElementById("DisplayAns").innerHTML = fare;
     }
 </script>
+
 <hr>
 <div class="row">
     <center>
@@ -150,7 +163,8 @@ backround-color: skyblue}
                 <a href="https://www.facebook.com/sam.bee.3705#" class="fa fa-facebook"></a>
                 <a href="https://www.instagram.com/sofiathefirstofficial_/?hl=en" class="fa fa-instagram"></a>
             </p>
-            <p><b>Office:</b> <i>47 East, Solana Suites, Quezon City</i></p>
+            <p><b>Office:</b> <i>47 East, Solana Suites, Quezon City</i></p>  <br>
+<a href="https://www.metrolinemap.com/metro/manila/" target="_blank" style="color: white; text-decoration: none;">View Manila Metro Map</a>
         </div>
     </center>
 </div>
@@ -158,7 +172,7 @@ backround-color: skyblue}
 </html>
       <br><br>
       <span>&copy; 2025 Toni Rianne Salvador, Sophia Issabel Macala & Samuel Joshua Delos Santos</span>
-      
+    
       </div>
       </center>
     </div>
